--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "build": "webpack --mode production",
+    "watch": "webpack --watch --mode development",
+    "start:dev": "webpack-dev-server --open --mode development"
   },
   "keywords": [],
   "author": "",
@@ -17,16 +18,130 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.8.2",
+    "file-loader": "^1.1.11",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
+    "stylelint": "^9.2.1",
+    "stylelint-webpack-plugin": "^0.10.5",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.4"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "plugins": [
+      "react"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended"
+    ],
+    "rules": {
+      "indent": [
+        "warn",
+        2
+      ],
+      "quotes": [
+        "warn",
+        "double"
+      ]
+    },
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "globals": {
+      "document": false
+    }
+  },
+  "stylelint": {
+    "rules": {
+      "block-no-empty": true,
+      "color-no-hex": true,
+      "color-named": "never",
+      "declaration-no-important": true,
+      "keyframe-declaration-no-important": true,
+      "declaration-block-no-duplicate-properties": true,
+      "selector-pseudo-element-no-unknown": true,
+      "no-eol-whitespace": true,
+      "function-name-case": "lower",
+      "at-rule-name-case": "lower",
+      "unit-case": "lower",
+      "property-case": "lower",
+      "selector-type-case": "lower",
+      "at-rule-semicolon-newline-after": "always",
+      "at-rule-semicolon-space-before": "never",
+      "function-url-quotes": "always",
+      "function-whitespace-after": "always",
+      "number-leading-zero": "never",
+      "declaration-bang-space-before": "always",
+      "declaration-block-trailing-semicolon": "always",
+      "block-closing-brace-newline-after": "always",
+      "block-opening-brace-newline-after": "always",
+      "media-feature-colon-space-after": "always",
+      "media-feature-colon-space-before": "never",
+      "string-quotes": "double",
+      "length-zero-no-unit": true,
+      "number-no-trailing-zeros": true,
+      "font-family-no-duplicate-names": true,
+      "function-calc-no-unspaced-operator": true,
+      "no-duplicate-at-import-rules": true,
+      "no-duplicate-selectors": true,
+      "no-extra-semicolons": true,
+      "value-no-vendor-prefix": true,
+      "property-no-vendor-prefix": true,
+      "selector-no-vendor-prefix": true,
+      "at-rule-no-vendor-prefix": true,
+      "media-feature-name-no-vendor-prefix": true,
+      "selector-no-qualifying-type": true,
+      "declaration-block-single-line-max-declarations": 1,
+      "selector-max-empty-lines": 0,
+      "selector-max-type": 1,
+      "selector-max-universal": 1,
+      "value-list-max-empty-lines": 0,
+      "comment-empty-line-before": [
+        "always",
+        {
+          "ignore": [
+            "stylelint-commands",
+            "after-comment"
+          ]
+        }
+      ],
+      "declaration-colon-space-after": "always",
+      "declaration-colon-space-before": "never",
+      "max-empty-lines": 1,
+      "rule-empty-line-before": [
+        "always",
+        {
+          "ignore": [
+            "after-comment"
+          ]
+        }
+      ],
+      "unit-whitelist": [
+        "px",
+        "em",
+        "rem",
+        "%",
+        "s",
+        "ms",
+        "vw",
+        "vh",
+        "deg"
+      ]
+    }
   }
 }
