--- a/package.json
+++ b/package.json
@@ -5,28 +5,130 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "build": "webpack --mode production",
+    "watch": "webpack --watch --mode development",
+    "start:dev": "webpack-dev-server --open --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.8.2",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "stylelint": "^9.2.1",
+    "stylelint-webpack-plugin": "^0.10.5",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "plugins": [
+      "react"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended"
+    ],
+    "rules": {
+      "indent": [
+        "warn",
+        2
+      ],
+      "quotes": [
+        "warn",
+        "single"
+      ],
+      "no-console": [
+        "warn",
+        {
+          "allow": [
+            "warn",
+            "error"
+          ]
+        }
+      ]
+    },
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "globals": {
+      "document": false
+    }
+  },
+  "stylelint": {
+    "rules": {
+      "block-no-empty": true,
+      "color-named": "never",
+      "keyframe-declaration-no-important": true,
+      "selector-pseudo-element-no-unknown": true,
+      "no-eol-whitespace": true,
+      "function-name-case": "lower",
+      "at-rule-name-case": "lower",
+      "unit-case": "lower",
+      "property-case": "lower",
+      "selector-type-case": "lower",
+      "at-rule-semicolon-newline-after": "always",
+      "at-rule-semicolon-space-before": "never",
+      "function-url-quotes": "always",
+      "function-whitespace-after": "always",
+      "number-leading-zero": "never",
+      "declaration-bang-space-before": "always",
+      "declaration-block-trailing-semicolon": "always",
+      "block-closing-brace-newline-after": "always",
+      "block-opening-brace-newline-after": "always",
+      "media-feature-colon-space-after": "always",
+      "media-feature-colon-space-before": "never",
+      "string-quotes": "double",
+      "length-zero-no-unit": true,
+      "number-no-trailing-zeros": true,
+      "function-calc-no-unspaced-operator": true,
+      "no-duplicate-at-import-rules": true,
+      "no-extra-semicolons": true,
+      "declaration-block-single-line-max-declarations": 1,
+      "selector-max-empty-lines": 0,
+      "selector-max-universal": 1,
+      "value-list-max-empty-lines": 0,
+      "comment-empty-line-before": [
+        "always",
+        {
+          "ignore": [
+            "stylelint-commands",
+            "after-comment"
+          ]
+        }
+      ],
+      "declaration-colon-space-after": "always",
+      "declaration-colon-space-before": "never",
+      "rule-empty-line-before": [
+        "always",
+        {
+          "ignore": [
+            "after-comment"
+          ]
+        }
+      ]
+    }
   }
 }
