--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "watch": "webpack --watch --mode development",
-    "start:dev": "webpack-dev-server --open --mode development"
+    "start:dev": "webpack-dev-server --mode development"
   },
   "keywords": [],
   "author": "",
