--- a/package.json
+++ b/package.json
@@ -1,51 +1,59 @@
 {
-  "name": "webpack-react",
+  "name": "webpack-wp-react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "watch": "webpack --watch --mode development",
-    "start:dev": "webpack-dev-server --mode development"
+    "start:dev": "webpack-dev-server --open --mode development --env.BASE_URL=http://localhost"
   },
   "keywords": [],
-  "author": "",
+  "person": {
+    "name": "Jakob Skov",
+    "email": "jakobskovolsen@gmail.com",
+    "url": "http://jakobskov.me/"
+  },
   "license": "ISC",
   "dependencies": {
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^2.0.1",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.15.3",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-react": "^7.12.4",
-    "file-loader": "^3.0.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.8.2",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "postcss-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.3",
     "sass-loader": "^6.0.7",
-    "style-loader": "^0.23.1",
-    "stylelint": "^9.10.1",
+    "style-loader": "^0.20.3",
+    "stylelint": "^9.2.1",
     "stylelint-webpack-plugin": "^0.10.5",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
     "plugins": [
       "react"
     ],
+    "settings": {
+      "react": {
+        "version": "latest"
+      }
+    },
     "extends": [
       "eslint:recommended",
       "plugin:react/recommended"
@@ -71,7 +79,8 @@
     },
     "env": {
       "browser": true,
-      "node": true
+      "node": true,
+      "es6": true
     },
     "globals": {
       "document": false
@@ -80,8 +89,11 @@
   "stylelint": {
     "rules": {
       "block-no-empty": true,
+      "color-no-hex": true,
       "color-named": "never",
+      "declaration-no-important": true,
       "keyframe-declaration-no-important": true,
+      "declaration-block-no-duplicate-properties": true,
       "selector-pseudo-element-no-unknown": true,
       "no-eol-whitespace": true,
       "function-name-case": "lower",
@@ -103,11 +115,20 @@
       "string-quotes": "double",
       "length-zero-no-unit": true,
       "number-no-trailing-zeros": true,
+      "font-family-no-duplicate-names": true,
       "function-calc-no-unspaced-operator": true,
       "no-duplicate-at-import-rules": true,
+      "no-duplicate-selectors": true,
       "no-extra-semicolons": true,
+      "value-no-vendor-prefix": true,
+      "property-no-vendor-prefix": true,
+      "selector-no-vendor-prefix": true,
+      "at-rule-no-vendor-prefix": true,
+      "media-feature-name-no-vendor-prefix": true,
+      "selector-no-qualifying-type": true,
       "declaration-block-single-line-max-declarations": 1,
       "selector-max-empty-lines": 0,
+      "selector-max-type": 1,
       "selector-max-universal": 1,
       "value-list-max-empty-lines": 0,
       "comment-empty-line-before": [
@@ -121,6 +142,7 @@
       ],
       "declaration-colon-space-after": "always",
       "declaration-colon-space-before": "never",
+      "max-empty-lines": 1,
       "rule-empty-line-before": [
         "always",
         {
@@ -128,6 +150,17 @@
             "after-comment"
           ]
         }
+      ],
+      "unit-whitelist": [
+        "px",
+        "em",
+        "rem",
+        "%",
+        "s",
+        "ms",
+        "vw",
+        "vh",
+        "deg"
       ]
     }
   }
